2024-09-15T01:15:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10866956277 # 419
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 952 1707 / 958 1713
* notice: next accum: outdated-unq outdated-all / unq all: 953 1708 / 960 1715
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-09-01] / [2024-09-14]

2024-09-13T01:08:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10841240919 # 417
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-13
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 952 1707 / 957 1712
* notice: next accum: outdated-unq outdated-all / unq all: 952 1707 / 958 1713
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-12]

2024-09-09T01:10:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10764731998 # 413
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-09
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 952 1707 / 955 1710
* notice: next accum: outdated-unq outdated-all / unq all: 952 1707 / 957 1712
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-09-08]

2024-09-08T01:13:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10755868146 # 412