@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-15T01:15:48Z",
+  "timestamp" : "2024-09-16T01:45:40Z",
   "count_outdated" : 1708,
   "uniques_outdated" : 953,
-  "count" : 1715,
-  "uniques" : 960,
+  "count" : 1718,
+  "uniques" : 963,
   "clones" : [
     {
       "timestamp": "2024-09-04T00:00:00Z",
@@ -49,6 +49,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-09-15T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
