@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 10,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2024-09-04T00:00:00Z",
@@ -26,6 +26,11 @@
       "timestamp": "2024-09-14T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-15T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
